# ROS2

./: Learning_Note.md
chapter1/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  cpp_test.cpp  python_test.py
chapter2_Node/: CMakeCache.txt  CMakeLists.txt.back  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  a.out  cmake_install.cmake  node_cpp  node_python.py  test_argv.cpp
chapter2_Node/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
chapter2_Node/chapter2_workspace/install/: local_setup.sh  setup.sh
chapter2_Node/chapter2_workspace/log/: latest_build
chapter2_Node/chapter2_workspace/src/demo_cpp_pkg/: CMakeLists.txt
chapter2_Node/chapter2_workspace/src/demo_cpp_pkg/src/: auto_test.cpp  class_node.cpp  cpp_node.cpp  funcational_test.cpp  lambda_test.cpp  shared_ptr_test.cpp  thread_test.cpp
chapter2_Node/chapter2_workspace/src/demo_python_pkg/: setup.py
chapter2_Node/chapter2_workspace/src/demo_python_pkg/demo_python_pkg/: inheritance_node.py
chapter2_Node/demo_cpp_pkg/: package.xml
chapter2_Node/demo_python_pkg/: package.xml  setup.py
chapter2_Node/install/: local_setup.sh  setup.sh
chapter2_Node/install/demo_cpp_pkg/lib/demo_cpp_pkg/: cpp_node
chapter2_Node/install/demo_cpp_pkg/share/demo_cpp_pkg/: local_setup.sh  package.sh
chapter2_Node/log/: latest_build
chapter3_Topic/: novel1.txt  novel2.txt  novel3.txt
chapter3_Topic/Topic_ws/install/: local_setup.sh  setup.sh
chapter3_Topic/Topic_ws/log/: latest_build
chapter3_Topic/Topic_ws/src/demo_cpp_topic/: CMakeLists.txt
chapter3_Topic/Topic_ws/src/demo_python_topic/: package.xml  setup.py
chapter3_Topic/install/: local_setup.sh  setup.sh
chapter3_Topic/log/: latest_build
chapter3_Topic/topic_practice_ws/install/: local_setup.sh  setup.sh
chapter3_Topic/topic_practice_ws/log/: latest_build
chapter3_Topic/topic_practice_ws/src/status_interfaces/: CMakeLists.txt
chapter4_Service/Service_ws/install/: local_setup.sh  setup.sh
chapter4_Service/Service_ws/log/: latest_build
chapter4_Service/Service_ws/src/chapt4_interfaces/: CMakeLists.txt
chapter4_Service/Service_ws/src/demo_python_service/: setup.py
chapter4_Service/install/: local_setup.sh  setup.sh
chapter4_Service/log/: latest_build
chapter5_Tools/chapt5_ws/install/: local_setup.sh  setup.sh
chapter5_Tools/chapt5_ws/log/: latest_build
chapter5_Tools/install/: local_setup.sh  setup.sh
chapter5_Tools/log/: latest_build
chapter6_Simulation/chapt6_ws/install/: local_setup.sh  setup.sh
chapter6_Simulation/chapt6_ws/log/: latest_build
chapter6_Simulation/chapt6_ws/src/demo_cpp_topic/: CMakeLists.txt
chapter6_Simulation/chapt6_ws/src/fishbot_description/: CMakeLists.txt
chapter7_Navigation/chapter7_ws/install/: local_setup.sh  setup.sh
chapter7_Navigation/chapter7_ws/log/: latest_build
chapter7_Navigation/chapter7_ws/src/autopatrol_interfaces/: CMakeLists.txt
chapter8_Navigation2/chapt8_ws/install/: local_setup.sh  setup.sh
chapter8_Navigation2/chapt8_ws/log/: latest_build
chapter8_Navigation2/chapt8_ws/src/autopatrol_robot/: setup.py
chapter8_Navigation2/learn_pluginlib/install/: local_setup.sh  setup.sh
chapter8_Navigation2/learn_pluginlib/log/: latest_build
chapter8_Navigation2/learn_pluginlib/src/motion_control_system/: CMakeLists.txt
(+108 files in other folders)
